--- a/FAQs.html
+++ b/FAQs.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href = "stylesheet.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Booking</title>
+
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
 </head>
-<body>
-    <img src = "Images/faqs2.jpg" id = "faqbackground"/>
-</body>
-</html>
+<body class="sharpPinkBg">
+    <div class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-header">
+          <div class="nav-title">
+            <a href="index.html" class="active logo-box" id="LogoContainer">
+              <img src="Images/Logo.PNG" id="Logo" />
+              <span id="LogoName">Fluff & Buff</span>
+            </a>
+          </div>
+        </div>
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </div>
+    
+        <div class="nav-links">
+    
+          <a href="booking.html">Book an Appointment</a>
+          <a href="FAQs.html">FAQs</a>
+          <a href="shop.html">Shop</a>
+          <a href="checkout.html" id="LogoContainer">
+            <img src="Images/Shopping cart.PNG" class="shoppingCart" />
+          </a>
+        </div>
+    </div>
