--- a/FAQs.html
+++ b/FAQs.html
@@ -49,8 +49,8 @@
                 <!-- answer1 -->
                 <div class="faqBody">
                     <p>
-                        We offer grooming 7 days a week. We typically start booking at 9:00 AM with our last appointment of the day at 9:00 PM. 
-                        If you have special needs that do not fall within these times, please let our staff know and we will make every effort to accommodate you. 
+                        We offer grooming everday of the week. We typically start booking at 9:00 AM with our last appointment of the day at 9:00 PM. 
+                        If you have special requests that do not fall within these times, please let us know and we will make every effort to accommodate you. 
                     </p>
                 </div>
             </div>
@@ -61,8 +61,8 @@
                 <!-- answer2 -->
                 <div class="faqBody">
                     <p>
-                        All fees are based on the length of time it takes to complete the service rather than by breed. 
-                        Size, behavior, condition and health of coat, length and density of coat, and length of time between visits will all affect the price. 
+                        All fees are based on size, behavior, condition and health of coat, length and density of coat, 
+                        and length of time between visits.
                     </p>
                 </div>
             </div>
@@ -74,9 +74,9 @@
                 <div class="faqBody">
                     <p>
                         Bath with no trim is around 1 ½  to 2 hours.
-                        Your groomer will gladly call you just prior to or after your dog is finished.
-                        If you need your dog groomed in less time, please explain your needs when making your appointment and 
-                        we will do our best to find a day and time to accommodate your request.
+                        Your groomer will give you a call prior to or after your pet is finished.
+                        If you need your pet groomed in less time, please let us know when making your appointment and 
+                        we will do our best to accommodate your request.
                     </p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <!-- answer4 -->
                 <div class="faqBody">
                     <p>
-                        To minimize the stress on your pet, we prefer they be picked up as soon after they are finished, as possible. 
+                        To minimize the stress on your pet, we prefer they be picked up as soon after they are finished.
                     </p>
                 </div>
             </div>
