--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="nav-title">
         <a href="index.html" class="active logo-box" id="LogoContainer">
           <img src="Images/Logo.PNG" id="Logo" />
-          <span id="LogoName">Fluff & Buff</span>
+          <span id="LogoName">Fluff & Buff</span>69
         </a>
       </div>
     </div>
@@ -102,7 +102,7 @@
       </div>
     </div>
     <div class="buttonContainer">
-      <button type="button" onclick="location.href='./booking.html;'"style="width:180px">Book an Appointment</button>
+      <button type="button" onclick="location.href='./booking.html'"style="width:180px">Book an Appointment</button>
     </div>
   </div>
 
@@ -189,9 +189,7 @@
               S$27.90
             </p>
             <div class="middle">
-              <a href="shop.html">
                 <button type="button"style="width:150px">Add to Cart</button>
-              </a>
             </div>
           </div>
         </div>
@@ -205,9 +203,7 @@
                     S$27.90
                 </p>
                 <div class="middle">
-                    <a href="shop.html">
                       <button type="button"style="width:150px">Add to Cart</button>
-                    </a>
                 </div>
             </div>
         </div>
@@ -222,9 +218,7 @@
                     S$52.90
                 </p>
                 <div class="middle">
-                    <a href="shop.html">
                       <button type="button"style="width:150px">Add to Cart</button>
-                    </a>
                 </div>
             </div>
         </div>
@@ -238,9 +232,7 @@
                 S$19.90
             </p>
             <div class="middle">
-                <a href="shop.html">
                   <button type="button"style="width:150px">Add to Cart</button>
-                </a>
             </div>
             </div>
         </div>
@@ -255,9 +247,7 @@
                     S$15.90
                 </p>
                 <div class="middle">
-                    <a href="shop.html">
                       <button type="button"style="width:150px">Add to Cart</button>
-                    </a>
                 </div>
             </div>
         </div>
@@ -271,9 +261,7 @@
                     S$28.00
                 </p>
                 <div class="middle">
-                    <a href="shop.html">
                       <button type="button"style="width:150px">Add to Cart</button>
-                    </a>
                 </div>
             </div>
         </div>
@@ -309,7 +297,7 @@
             <b>Telephone No: </b>+65 63211429 <br>
           </p>
           <div class="buttonContainer">
-            <button type="button" onclick="location:href='faq.html'">FAQs</button>
+            <button type="button" onclick="location.href='./FAQs.html'">FAQs</button>
           </div>
         </div>
       </div>
