--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="nav-title">
         <a href="index.html" class="active logo-box" id="LogoContainer">
           <img src="Images/Logo.PNG" id="Logo" />
-          <span id="LogoName">Fluff & Buff</span>69
+          <span id="LogoName">Fluff & Buff</span>
         </a>
       </div>
     </div>
@@ -391,10 +391,6 @@
     }
 
   </script>
-
-
-
-
 
 </body>
 
