--- a/booking.html
+++ b/booking.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booking</title>
+    <link rel="icon" type="image/png" href="./Images/pet-care.png">
 
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href='https://fonts.googleapis.com/css?family=PlayfairDisplay' rel='stylesheet'>
 </head>
 <body class="sharpPinkBg">
     <div class="nav">
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
           <div class="nav-title">
-            <a href="index.html" class="active logo-box" id="LogoContainer">
-              <img src="Images/Logo.PNG" id="Logo" />
+            <a href="index.html" class="active logo-box LogoContainer">
+              <img src="Images/Logo.PNG" alt="Logo" id="Logo">
               <span id="LogoName">Fluff & Buff</span>
             </a>
           </div>
@@ -34,16 +35,16 @@
           <a href="booking.html">Book an Appointment</a>
           <a href="FAQs.html">FAQs</a>
           <a href="shop.html">Shop</a>
-          <a href="checkout.html" id="LogoContainer">
-            <img src="Images/Shopping cart.PNG" class="shoppingCart" />
+          <a href="checkout.html" class="LogoContainer">
+            <img src="Images/shoppingcart.PNG" alt="shoppingcart" class="shoppingCart">
           </a>
         </div>
-    </div>
+      </div>
 
     <div class="centerContainer">
-        <div class="whiteBg bookingCard">
+        <div class="whiteBg card">
             <h1 class="header">Book an Appointment</h1>
-            <div>
+            <div style="font-family:Calibri, Verdana, sans-serif">
                 <label for="apptName" class="apptTextInput">Enter your name:</label>
                 <input type="text" id="apptName" class="apptInput"><br>
 
@@ -116,7 +117,7 @@
                 <input type="text" id="apptContactNum" class="apptInput"><br><br>
 
                 <div class="buttonContainer">
-                    <button type="button" onclick="showSuccessMessage()"style="width:180px">Book</button>
+                    <button type="button" onclick="showSuccessMessage()" style="width:180px">Book</button>
                 </div>
                 <script>
                     function showSuccessMessage() {
