shop item update

--- a/shop.html
+++ b/shop.html
@@ -113,7 +113,7 @@
             <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/shampoo5.jpg" style="width: 80%;" >
             </div>
-            <p class="itemText">
+            <p class="itemText" style="padding: 10px;">
                 Melanie Newman Relax Dog Shampoo (500ml)  <br>
                 <b>S$39.90</b>
             </p>
