--- a/shop.html
+++ b/shop.html
@@ -109,7 +109,7 @@
           </div>
         </div>
         <div class="fourCol centerContainer">
-          <div class="whiteBg itemCard">
+          <div class="whiteBg itemCard" style="width: 100%; height: 370px">
             <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/shampoo5.jpg" style="width: 80%;" >
             </div>
