checkout text edit

--- a/checkout.html
+++ b/checkout.html
@@ -110,7 +110,7 @@
           <div>
             <label for="discountCode">Discount Code (optional):</label><br>
             <input type="text" id="discountCode"><br><br>
-            Subtotal:<br>
+            Total:<br>
             <h3>S$61.70</h3>
             <div class="centerContainer">
               <button type="button" id="checkoutBtn" style="width:100px; margin:0px;">Checkout</button>
